--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,8 +36,7 @@
             app:layout_constraintBottom_toTopOf="@id/text_search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/frameLayout"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintTop_toTopOf="@id/frameLayout" />
 
     <FrameLayout
             android:id="@+id/frameLayout"
