--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,7 +9,7 @@
         android:background="@color/red_400">
 
     <TextView
-            android:id="@+id/text_profile"
+            android:id="@+id/textProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -33,8 +33,8 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/text_profile"
-            app:layout_constraintLeft_toLeftOf="@id/text_profile"
+            app:layout_constraintTop_toBottomOf="@id/textProfile"
+            app:layout_constraintLeft_toLeftOf="@id/textProfile"
             app:layout_constraintRight_toLeftOf="@+id/subscribers"
             tools:ignore="SmallSp" />
 
@@ -48,7 +48,7 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/text_profile"
+            app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/lists"
             app:layout_constraintRight_toLeftOf="@+id/subscriptions"
             tools:ignore="SmallSp" />
@@ -63,9 +63,9 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/text_profile"
+            app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/subscribers"
-            app:layout_constraintRight_toRightOf="@id/text_profile"
+            app:layout_constraintRight_toRightOf="@id/textProfile"
             tools:ignore="SmallSp" />
 
     <ImageView
