--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -8,7 +8,8 @@
         tools:context=".ui.lists.ListsFragment"
         android:background="#ED959E"
         android:backgroundTint="@color/red_200"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:id="@+id/fragment_lists">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_lists"
