--- a/app/src/main/res/layout/loading_screens.xml
+++ b/app/src/main/res/layout/loading_screens.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/icon_ls2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_ls_icon2"
+                android:src="@drawable/ic_cinema"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/shareTxt"
                 app:layout_constraintStart_toStartOf="parent"
