--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,8 @@
         <item name="colorControlActivated">@color/red_700</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
+
+    <style name="Theme.Splash" parent = "Theme.AppCompat.NoActionBar">
+        <item  name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
