--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,14 +73,14 @@
             android:layout_width="124dp"
             android:layout_height="124dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/change_profile_button"
-            app:layout_constraintEnd_toEndOf="@id/change_profile_button"
+            app:layout_constraintStart_toStartOf="@id/changeProfileButton"
+            app:layout_constraintEnd_toEndOf="@id/changeProfileButton"
             android:layout_marginTop="30dp"
             android:foreground="@drawable/photo"
             tools:ignore="ContentDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/image_exit"
+            android:id="@+id/imageExit"
             android:background="@drawable/ic_baseline_exit_to_app_24"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -100,7 +100,7 @@
             tools:ignore="ContentDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/change_profile_button"
+            android:id="@+id/changeProfileButton"
             android:layout_width="171dp"
             android:layout_height="25dp"
             android:textColor="@color/white_full"
