--- a/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
@@ -4,6 +4,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:background="@color/red_200">
 
     <androidx.cardview.widget.CardView
@@ -14,30 +15,21 @@
             android:background="@color/red_200"
             app:cardPreventCornerOverlap="false">
 
+
+
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/red_200">
+                android:background="@color/red_200"
+                android:id="@+id/main_relative_layout"
+                >
+
 
             <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rectangle_search_result">
 
-            <!--<androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="60dp"
-                    app:cardCornerRadius="15dp"
-                    android:layout_marginStart="10dp"
-                    app:cardBackgroundColor="@android:color/transparent">
-
-            <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/movie_photo"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/movie_image_content" />
-            </androidx.cardview.widget.CardView>-->
 
             <ImageView
                     android:layout_width="60dp"
@@ -72,7 +64,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp" />
 
-            <TextView
+
+                <TextView
                     android:layout_below="@+id/movie_title"
                     android:layout_toEndOf="@+id/movie_photo"
                     android:layout_width="wrap_content"
@@ -84,8 +77,21 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="20dp"/>
 
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/movie_year"
+                        android:background="@drawable/rectangle_transparent_movie_poster"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
+                        android:tag="button_not_liked"
+                        android:id="@+id/like_button_recycler_view"
+                         />
+
+
             </RelativeLayout>
         </RelativeLayout>
+
 
     </androidx.cardview.widget.CardView>
 
