--- a/app/src/main/res/layout/subscribers_item.xml
+++ b/app/src/main/res/layout/subscribers_item.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/red_400"
-        android:padding="12dp"
+        android:padding="8dp"
         android:background="@drawable/border"
         android:layout_marginBottom="12dp" >
 
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/ic_like_40dp"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="@id/profilePic"
