--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,20 @@
         android:id="@+id/profile_lay"
         android:background="@color/red_400">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listsRV"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/open_list_film"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintTop_toTopOf="@id/dashed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/show_all"
+            app:layout_constraintVertical_bias="0.0" />
+
     <TextView
             android:id="@+id/textProfile"
             android:layout_width="wrap_content"
@@ -116,7 +130,7 @@
             android:layout_marginStart="7dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/subscribe_button"
+            android:id="@+id/show_all"
             android:layout_width="115dp"
             android:layout_height="25dp"
             android:textColor="@color/white_full"
@@ -128,8 +142,7 @@
             android:background="@drawable/subscribe"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="650dp"
             android:layout_marginStart="11dp"
-            android:layout_marginBottom="75dp" />
+            android:layout_marginBottom="55dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
