--- a/app/src/main/res/layout/friends_profile.xml
+++ b/app/src/main/res/layout/friends_profile.xml
@@ -114,8 +114,21 @@
             android:layout_marginTop="175dp"
             android:layout_marginStart="7dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listsRV"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/open_list_film"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintTop_toTopOf="@id/dashed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/show_all"
+            app:layout_constraintVertical_bias="0.0" />
+
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/subscribe_button"
+            android:id="@+id/show_all"
             android:layout_width="115dp"
             android:layout_height="25dp"
             android:textColor="@color/white_full"
@@ -127,8 +140,7 @@
             android:background="@drawable/subscribe"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="650dp"
             android:layout_marginStart="11dp"
-            android:layout_marginBottom="75dp" />
+            android:layout_marginBottom="55dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
