--- a/app/src/main/res/layout/list_of_fav_frag.xml
+++ b/app/src/main/res/layout/list_of_fav_frag.xml
@@ -9,7 +9,7 @@
         android:clickable="true">
 
     <ImageButton
-            android:id="@+id/backBtn"
+            android:id="@+id/backFavBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back"
@@ -29,22 +29,22 @@
             app:layout_constraintEnd_toStartOf="@id/higherDots" />-->
 
     <ImageButton
-            android:id="@+id/higherDots"
+            android:id="@+id/higherFavDots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu_dots_40dp"
             android:background="@android:color/transparent"
             android:layout_marginEnd="4dp"
-            app:layout_constraintTop_toTopOf="@id/backBtn"
-            app:layout_constraintBottom_toBottomOf="@id/backBtn"
+            app:layout_constraintTop_toTopOf="@id/backFavBtn"
+            app:layout_constraintBottom_toBottomOf="@id/backFavBtn"
             app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-            android:id="@+id/listTitle"
+            android:id="@+id/listFavTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Понравились"
-            app:layout_constraintTop_toBottomOf="@id/backBtn"
+            app:layout_constraintTop_toBottomOf="@id/backFavBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:fontFamily="@font/rubik_bold"
@@ -58,7 +58,7 @@
             android:layout_height="0dp"
             android:background="@color/red_700"
             android:src="@drawable/ic_like_24"
-            app:layout_constraintTop_toBottomOf="@id/listTitle"
+            app:layout_constraintTop_toBottomOf="@id/listFavTitle"
             app:layout_constraintBottom_toTopOf="@id/filmFavListRecyclerView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
