--- a/app/src/main/res/layout/lists_menu.xml
+++ b/app/src/main/res/layout/lists_menu.xml
@@ -5,7 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/red_200"
-        android:clickable="true">
+        android:clickable="true"
+        android:id="@+id/list_of_movie">
 
     <ImageButton
             android:id="@+id/backBtn"
