--- a/app/src/main/res/layout/film_page.xml
+++ b/app/src/main/res/layout/film_page.xml
@@ -266,15 +266,18 @@
                     android:textColor="@color/white_full"
                     android:layout_margin="20dp" />
 
-            <TextView
+            <EditText
                     android:id="@+id/userRate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik_bold"
                     android:textSize="18sp"
                     android:textColor="@color/red_700"
-                    tools:text="9"
-                    android:layout_marginTop="16dp"
+                    android:textColorHint="@color/red_700"
+                    android:hint=""
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:layout_marginTop="6dp"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintTop_toBottomOf="@id/rateFilm"
                     app:layout_constraintStart_toStartOf="@id/rateFilm"
