--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,7 +32,7 @@
             android:textStyle="bold"
             android:textSize="22sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/photo"
+            app:layout_constraintStart_toEndOf="@id/profile_photo"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="60dp" />
 
@@ -83,15 +83,16 @@
             tools:ignore="SmallSp" />
 
     <ImageView
-            android:id="@+id/photo"
+            android:id="@+id/profile_photo"
             android:layout_width="124dp"
             android:layout_height="124dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="@id/changeProfileButton"
             app:layout_constraintEnd_toEndOf="@id/changeProfileButton"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="28dp"
             android:foreground="@drawable/photo"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            app:layout_constraintHorizontal_bias="0.489" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/imageExit"
