--- a/app/src/main/res/layout/friends_profile.xml
+++ b/app/src/main/res/layout/friends_profile.xml
@@ -9,7 +9,7 @@
         android:background="@color/red_400">
 
     <TextView
-            android:id="@+id/textProfile"
+            android:id="@+id/friend_textProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -18,12 +18,12 @@
             android:textStyle="bold"
             android:textSize="22sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/photo"
+            app:layout_constraintStart_toEndOf="@id/friend_photo"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="60dp" />
 
     <TextView
-            android:id="@+id/lists"
+            android:id="@+id/friend_lists"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,13 +33,13 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/textProfile"
-            app:layout_constraintLeft_toLeftOf="@id/textProfile"
-            app:layout_constraintRight_toLeftOf="@+id/subscribers"
+            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
+            app:layout_constraintLeft_toLeftOf="@id/friend_textProfile"
+            app:layout_constraintRight_toLeftOf="@+id/friend_subscribers"
             tools:ignore="SmallSp" />
 
     <TextView
-            android:id="@+id/subscribers"
+            android:id="@+id/friend_subscribers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -48,13 +48,13 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/textProfile"
-            app:layout_constraintLeft_toRightOf="@id/lists"
-            app:layout_constraintRight_toLeftOf="@+id/subscriptions"
+            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
+            app:layout_constraintLeft_toRightOf="@id/friend_lists"
+            app:layout_constraintRight_toLeftOf="@+id/friend_subscriptions"
             tools:ignore="SmallSp" />
 
     <TextView
-            android:id="@+id/subscriptions"
+            android:id="@+id/friend_subscriptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -63,18 +63,18 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/textProfile"
-            app:layout_constraintLeft_toRightOf="@id/subscribers"
-            app:layout_constraintRight_toRightOf="@id/textProfile"
+            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
+            app:layout_constraintLeft_toRightOf="@id/friend_subscribers"
+            app:layout_constraintRight_toRightOf="@id/friend_textProfile"
             tools:ignore="SmallSp" />
 
     <ImageView
-            android:id="@+id/photo"
+            android:id="@+id/friend_photo"
             android:layout_width="124dp"
             android:layout_height="124dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/changeProfileButton"
-            app:layout_constraintEnd_toEndOf="@id/changeProfileButton"
+            app:layout_constraintStart_toStartOf="@id/subscribeButton"
+            app:layout_constraintEnd_toEndOf="@id/subscribeButton"
             android:layout_marginTop="30dp"
             android:foreground="@drawable/photo"
             tools:ignore="ContentDescription" />
@@ -99,7 +99,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/changeProfileButton"
+            android:id="@+id/subscribeButton"
             android:layout_width="171dp"
             android:layout_height="25dp"
             android:textColor="@color/white_full"
@@ -115,7 +115,7 @@
             android:layout_marginStart="7dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listsRV"
+            android:id="@+id/friend_listsRV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
