--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:text="@string/playlists_string"
+            android:lines="2"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -62,6 +63,7 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
+            android:lines="2"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/lists"
             app:layout_constraintRight_toLeftOf="@+id/subscriptions"
@@ -77,6 +79,7 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
+            android:lines="2"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/subscribers"
             app:layout_constraintRight_toRightOf="@id/textProfile"
