--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_below="@+id/title"
             android:scrollbars="vertical"
-            android:layout_height="420dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
             android:id="@+id/recyclerView" />
     <ImageView
