lists and search done 98%

--- a/app/src/main/res/layout/lists_menu.xml
+++ b/app/src/main/res/layout/lists_menu.xml
@@ -53,7 +53,7 @@
 
     <ImageView
             android:id="@+id/listIcon"
-            android:src="@drawable/pobeg"
+            tools:src="@drawable/pobeg"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/red_700"
