--- a/app/src/main/res/menu/dot_fav_menu.xml
+++ b/app/src/main/res/menu/dot_fav_menu.xml
@@ -2,9 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-            android:id="@+id/item_share"
-            android:title="@string/share_link"
+            android:id="@+id/item_delete"
+            android:title="@string/delete_movie"
             android:visible="true"
             app:showAsAction="ifRoom|withText" />
-
 </menu>
