--- a/app/src/main/res/layout/change_profile.xml
+++ b/app/src/main/res/layout/change_profile.xml
@@ -6,15 +6,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.profile.ChangeProfileFragment"
         android:id="@+id/change_profile_lay"
-        android:background="@color/red_400">
+        android:background="@color/red_200">
 
     <TextView
             android:id="@+id/change_profile_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/backBtnСh"
-            app:layout_constraintBottom_toBottomOf="@id/backBtnСh"
+            app:layout_constraintTop_toTopOf="@id/backBtnCh"
+            app:layout_constraintBottom_toBottomOf="@id/backBtnCh"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="@string/change_profile_title_string"
@@ -23,7 +23,7 @@
             android:textColor="@color/white_full" />
 
     <ImageButton
-            android:id="@+id/backBtnСh"
+            android:id="@+id/backBtnCh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -36,11 +36,11 @@
             android:id="@+id/changePhoto"
             android:layout_width="160dp"
             android:layout_height="160dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/change_profile_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/changePhotoButton"
-            android:foreground="@drawable/rounded_fg"
+            android:foreground="@drawable/rounded_fg_light"
             tools:ignore="ContentDescription"
             android:scaleType="centerCrop" />
 
