--- a/app/src/main/res/layout/friends_profile.xml
+++ b/app/src/main/res/layout/friends_profile.xml
@@ -8,20 +8,6 @@
         android:id="@+id/profile_lay"
         android:background="@color/red_400">
 
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listsRV"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/open_list_film"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintTop_toTopOf="@id/dashed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/show_all"
-            app:layout_constraintVertical_bias="0.0" />
-
     <TextView
             android:id="@+id/textProfile"
             android:layout_width="wrap_content"
@@ -43,7 +29,6 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:text="@string/playlists_string"
-            android:lines="2"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -63,7 +48,6 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            android:lines="2"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/lists"
             app:layout_constraintRight_toLeftOf="@+id/subscriptions"
@@ -79,7 +63,6 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            android:lines="2"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/subscribers"
             app:layout_constraintRight_toRightOf="@id/textProfile"
@@ -96,16 +79,6 @@
             android:foreground="@drawable/photo"
             tools:ignore="ContentDescription" />
 
-    <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/imageExit"
-            android:background="@drawable/ic_baseline_exit_to_app_24"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp" />
-
     <ImageView
             android:id="@+id/dashed"
             android:layout_width="match_parent"
@@ -115,6 +88,15 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="226dp"
             tools:ignore="ContentDescription" />
+    <ImageButton
+            android:id="@+id/backBtnCh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_arrow_back"
+            android:background="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/changeProfileButton"
@@ -125,12 +107,25 @@
             android:textAllCaps="false"
             android:textSize="14sp"
             android:textAlignment="center"
-            android:text="@string/change_profile_string"
+            android:text="@string/subscribe_string"
             android:background="@drawable/subscribe"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="175dp"
             android:layout_marginStart="7dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listsRV"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/open_list_film"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintTop_toTopOf="@id/dashed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/show_all"
+            app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/show_all"
