--- a/app/src/main/res/layout/friends_search.xml
+++ b/app/src/main/res/layout/friends_search.xml
@@ -44,6 +44,7 @@
             android:layout_height="50dp"
             android:layout_margin="8dp"
             android:padding="8dp"
+            android:maxLines="1"
             app:layout_constraintTop_toBottomOf="@id/appBar"
             android:hint="@string/input_friend_name"
             android:background="@color/white_full"
