--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,12 +27,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@string/profile_name_string"
+            tools:text="@string/profile_name_string"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="22sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/profile_photo"
+            app:layout_constraintStart_toEndOf="@id/profilePhoto"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="60dp" />
 
@@ -83,7 +83,7 @@
             tools:ignore="SmallSp" />
 
     <ImageView
-            android:id="@+id/profile_photo"
+            android:id="@+id/profilePhoto"
             android:layout_width="124dp"
             android:layout_height="124dp"
             app:layout_constraintTop_toTopOf="parent"
