--- a/app/src/main/res/layout/open_friend_list_film.xml
+++ b/app/src/main/res/layout/open_friend_list_film.xml
@@ -27,7 +27,7 @@
                 android:textStyle="bold"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@id/img_list"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/addBtn"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/film_count"/>
 
@@ -38,13 +38,12 @@
                 tools:text="5 фильмов"
                 android:textColor="@color/white_text"
                 android:layout_marginBottom="28dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/item_title"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/addBtn"
                 app:layout_constraintTop_toBottomOf="@id/item_title"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-
 
         <ImageView
                 android:id="@+id/img_list"
@@ -52,13 +51,24 @@
                 android:layout_height="70dp"
                 tools:srcCompat="@tools:sample/avatars"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintCircleRadius="180dp"
                 android:background="@color/red_200"
                 android:foreground="@drawable/rounded_fg_light"/>
+
+        <ImageButton
+            android:id="@+id/addBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:background="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
