--- a/app/src/main/res/layout/list_menu_film.xml
+++ b/app/src/main/res/layout/list_menu_film.xml
@@ -16,7 +16,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/pobeg"
-            android:background="@drawable/border"
+            android:scaleType="centerCrop"
             android:layout_marginLeft="8dp"/>
 
     <TextView
