--- a/app/src/main/res/layout/film_page.xml
+++ b/app/src/main/res/layout/film_page.xml
@@ -60,6 +60,7 @@
                 android:id="@+id/filmSearchPoster"
                 android:layout_width="130dp"
                 android:layout_height="175dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/backBtnFilmPage"
                 android:layout_margin="16dp"
