--- a/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
@@ -30,6 +30,7 @@
                         android:layout_height="60dp"
                         android:id="@+id/movie_photo"
                         android:layout_gravity="center"
+                        android:layout_margin="4dp"
                         android:contentDescription="@string/movie_image_content" />
 
                 <TextView
