--- a/app/src/main/res/layout/list_of_fav_frag.xml
+++ b/app/src/main/res/layout/list_of_fav_frag.xml
@@ -47,6 +47,7 @@
             android:id="@+id/listIconFav"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:scaleType="centerCrop"
             android:background="@color/red_700"
             android:src="@drawable/ic_like_24"
             app:layout_constraintTop_toBottomOf="@id/listFavTitle"
