--- a/app/src/main/res/layout/lists_menu.xml
+++ b/app/src/main/res/layout/lists_menu.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back"
+            android:scaleType="centerCrop"
             android:background="@android:color/transparent"
             android:layout_margin="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -58,6 +59,7 @@
             android:layout_height="0dp"
             android:background="@color/red_700"
             android:layout_margin="16dp"
+            android:scaleType="centerCrop"
             app:layout_constraintTop_toBottomOf="@id/listTitle"
             app:layout_constraintBottom_toTopOf="@id/filmListRecyclerView"
             app:layout_constraintStart_toStartOf="parent"
