--- a/app/src/main/res/layout/open_friend_list_film.xml
+++ b/app/src/main/res/layout/open_friend_list_film.xml
@@ -49,6 +49,7 @@
                 android:id="@+id/img_list"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
