--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="@string/playlists_string"
+            tools:text="@string/playlists_string"
             android:lines="2"
             android:textColor="@color/white_full"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="@string/subscribers_string"
+            tools:text="@string/subscribers_string"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="@string/subscriptions_string"
+            tools:text="@string/subscriptions_string"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="12sp"
