--- a/app/src/main/res/layout/list_of_fav_frag.xml
+++ b/app/src/main/res/layout/list_of_fav_frag.xml
@@ -35,6 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Понравились"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@id/listIconFav"
             app:layout_constraintTop_toBottomOf="@id/backFavBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +52,7 @@
             android:scaleType="centerCrop"
             android:background="@color/red_700"
             android:src="@drawable/ic_like_24"
+            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@id/listFavTitle"
             app:layout_constraintBottom_toTopOf="@id/filmFavListRecyclerView"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,11 +65,11 @@
             android:id="@+id/filmFavListRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/listIconFav"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/list_menu_film"
-            app:layout_constraintHeight_percent="0.65"
-            app:layout_constraintVertical_bias="1.0"
             android:layout_marginBottom="55dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
